[tool.poetry]
name = "enumatch"
version = "0.1.1"
description = "Force match all possibilities of an enum"
authors = ["Arijit Basu <sayanarijit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
pytest-mypy = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
